--- a/ProyectoFinal/SignalRChat/ProyectoFinal.csproj
+++ b/ProyectoFinal/SignalRChat/ProyectoFinal.csproj
@@ -213,6 +213,8 @@
     <Content Include="Scripts\jquery-1.8.2.min.js" />
     <Content Include="Scripts\jquery.signalR-1.0.0.js" />
     <Content Include="Scripts\jquery.signalR-1.0.0.min.js" />
+    <Content Include="Css\sweetalert.css" />
+    <Content Include="Scripts\sweetalert.min.js" />
     <Content Include="Scripts\ui\jquery.ui.core.js" />
     <Content Include="Scripts\ui\jquery.ui.dialog.js" />
     <Content Include="Scripts\ui\jquery.ui.draggable.js" />
